--- a/UFO-level-1/index.html
+++ b/UFO-level-1/index.html
@@ -14,15 +14,6 @@
       <center><h1>UFO Sightings</h1></center>
       <center><h3>Use the table below to find UFO sightings near you!</h3></center>
     </div>
-    <div class="table-responsive">
-      <table class="table">
-        <thead>
-
-        </thead>
-        <tbody>
-          
-        </tbody>
-      </table>
-    </div>
+    <script src="static/js/app.js" charset="utf-8"></script>
   </body>
 </html>
