--- a/UFO-level-1/index.html
+++ b/UFO-level-1/index.html
@@ -14,6 +14,22 @@
       <center><h1>UFO Sightings</h1></center>
       <center><h3>Use the table below to find UFO sightings near you!</h3></center>
     </div>
-    <script src="static/js/app.js" charset="utf-8"></script>
+    <div class="col-sm-12">
+      <script src="static/js/data.js" charset="utf-8"></script>
+      <script src="static/js/app.js" charset="utf-8"></script>
+      <table class="table table-striped table-responsive table-bordered">
+        <thead>
+          <th>Date</th>
+          <th>City</th>
+          <th>State</th>
+          <th>Country</th>
+          <th>Shape</th>
+          <th>Duration (minutes)</th>
+          <th>Comments</th>
+        </thead>
+        <tbody>
+        </tbody>
+      </table>
+    </div>
   </body>
 </html>
