--- a/UFO-level-1/index.html
+++ b/UFO-level-1/index.html
@@ -19,7 +19,7 @@
       <script src="static/js/app.js" charset="utf-8"></script>
       <table class="table table-striped table-responsive table-bordered">
         <thead>
-          <th>Date</th>
+          <th>Date/Time</th>
           <th>City</th>
           <th>State</th>
           <th>Country</th>
