--- a/UFO-level-1/index.html
+++ b/UFO-level-1/index.html
@@ -1,23 +1,30 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang='en' dir='ltr'>
   <head>
-    <meta charset="utf-8">
+    <meta charset='utf-8'>
     <title>UFO Finder</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/superhero/bootstrap.min.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Space+Grotesk&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="static/css/style.css">
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/superhero/bootstrap.min.css'>
+    <link rel='preconnect' href='https://fonts.gstatic.com'>
+    <link href='https://fonts.googleapis.com/css2?family=Roboto&family=Space+Grotesk&display=swap' rel='stylesheet'>
+    <link rel='stylesheet' href='static/css/style.css'>
   </head>
   <body>
-    <div class="jumbotron">
+    <div class='jumbotron'>
       <center><h1>UFO Sightings</h1></center>
       <center><h3>Use the table below to find UFO sightings near you!</h3></center>
     </div>
-    <div class="col-sm-12">
-      <script src="static/js/data.js" charset="utf-8"></script>
-      <script src="static/js/app.js" charset="utf-8"></script>
-      <table class="table table-striped table-responsive table-bordered">
+    <div class='row'>
+      <form id='form'>
+        <div class='form-group'>
+          <label for='datetime-filter'>Filter Sightings by Date</label>
+          <input class='form-control' id='sighting-date' name='sighting-filter-by-datetime' type='text' placeholder='1/1/1900'>
+        </div>
+        <button id='button' type='button' class='btn btn-default'>Enter</button>
+      </form>
+    </div>
+    <div class='col-sm-12'>
+      <table class='table table-striped table-responsive table-bordered'>
         <thead>
           <th>Date/Time</th>
           <th>City</th>
@@ -31,5 +38,7 @@
         </tbody>
       </table>
     </div>
+    <script src='static/js/data.js' charset='utf-8'></script>
+    <script src='static/js/app.js' charset='utf-8'></script>
   </body>
 </html>
