--- a/UFO-level-1/index.html
+++ b/UFO-level-1/index.html
@@ -17,10 +17,10 @@
     <div class='row'>
       <form id='form'>
         <div class='form-group'>
-          <label for='datetime-filter'>Filter Sightings by Date</label>
+          <center><label for='datetime-filter'>Filter Sightings by Date</label></center>
           <input class='form-control' id='sighting-date' name='sighting-filter-by-datetime' type='text' placeholder='1/1/1900'>
         </div>
-        <button id='button' type='button' class='btn btn-default'>Enter</button>
+        <center><button id='button' type='button' class='btn btn-default'>Filter</button></center>
       </form>
     </div>
     <div class='col-sm-12'>
