--- a/UFO-level-1/index.html
+++ b/UFO-level-1/index.html
@@ -34,11 +34,12 @@
           <th>Duration (minutes)</th>
           <th>Comments</th>
         </thead>
-        <tbody>
+        <tbody class='tbody'>
         </tbody>
       </table>
     </div>
-    <script src='static/js/data.js' charset='utf-8'></script>
-    <script src='static/js/app.js' charset='utf-8'></script>
   </body>
+<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+<script src='static/js/data.js' charset='utf-8'></script>
+<script src='static/js/app.js' charset='utf-8'></script>
 </html>
