--- a/UFO-level-1/index.html
+++ b/UFO-level-1/index.html
@@ -24,7 +24,7 @@
       </form>
     </div>
     <div class='col-sm-12'>
-      <table class='table table-striped table-responsive table-bordered'>
+      <table class='table table-responsive table-bordered'>
         <thead>
           <th>Date/Time</th>
           <th>City</th>
@@ -34,7 +34,7 @@
           <th>Duration (minutes)</th>
           <th>Comments</th>
         </thead>
-        <tbody class='tbody'>
+        <tbody>
         </tbody>
       </table>
     </div>
