--- a/UFO-level-1/index.html
+++ b/UFO-level-1/index.html
@@ -20,7 +20,10 @@
           <center><label for='datetime-filter'>Filter Sightings by Date</label></center>
           <input class='form-control' id='sighting-date' name='sighting-filter-by-datetime' type='text' placeholder='1/1/1900'>
         </div>
-        <center><button id='button' type='button' class='btn btn-default'>Filter</button></center>
+        <center>
+          <button id='filter-button' type='button' class='btn btn-default'>Filter</button>
+          <button id='reset-button' type='button' class='btn btn-default'>Reset</button>
+        </center>
       </form>
     </div>
     <div class='col-sm-12'>
