--- a/UFO-level-2/index.html
+++ b/UFO-level-2/index.html
@@ -17,7 +17,8 @@
     <div class='row'>
       <form id='form'>
         <div class='form-group'>
-          <center><label for='datetime-filter'>Filter Sightings/label></center>
+          <center><label for='datetime-filter'>Filter Sightings</label></center>
+          <center><label for='datetime-filter'>Use date(M/D/YYYY), city, state (AL), country (US), or shape to filter the UFO sightings.</label></center>
           <input class='form-control' id='sighting-date' name='sighting-filter-by-datetime' type='text' placeholder='1/1/1900'>
         </div>
         <center>
