--- a/UFO-level-2/index.html
+++ b/UFO-level-2/index.html
@@ -15,8 +15,8 @@
       <center><h3>Use the table below to find UFO sightings near you!</h3></center>
     </div>
     <div class='col-sm-12'>
-      <h5>Filter Data By:</h5>
       <form id='form'>
+        <center><h3>Filter Data By:</h3></center>
         <div class='form-group'>
           <center><label for='datetime-filter'>Date/Time</label></center>
           <input class='form-control' id='sighting-date' name='sighting-filter-by-datetime' type='text' placeholder='1/1/1900'>
