--- a/UFO-level-1/index.html
+++ b/UFO-level-1/index.html
@@ -16,10 +16,10 @@
     </div>
     <div class='row'>
       <form id='form'>
-        <div class='form-group'>
+        <center><div class='form-group'>
           <center><label for='datetime-filter'>Filter Sightings by Date</label></center>
           <input class='form-control' id='sighting-date' name='sighting-filter-by-datetime' type='text' placeholder='1/1/1900'>
-        </div>
+        </div></center>
         <center>
           <button id='filter-button' type='button' class='btn btn-default'>Filter</button>
           <button id='reset-button' type='button' class='btn btn-default'>Reset</button>
