--- a/UFO-level-2/index.html
+++ b/UFO-level-2/index.html
@@ -14,35 +14,39 @@
       <center><h1>UFO Sightings</h1></center>
       <center><h3>Use the table below to find UFO sightings near you!</h3></center>
     </div>
-    <div class='col-sm-12'>
+    <center><div class='col-sm-12'>
       <form id='form'>
         <center><h3>Filter Data By:</h3></center>
         <div class='form-group'>
           <center><label for='datetime-filter'>Date/Time</label></center>
           <input class='form-control' id='sighting-date' name='sighting-filter-by-datetime' type='text' placeholder='1/1/1900'>
+          <button id='filter-button-date' type='button' class='btn btn-default'>Filter Date</button>
         </div>
         <div class='form-group'>
           <center><label for='city-filter'>City</label></center>
           <input class='form-control' id='sighting-city' name='sighting-filter-by-datetime' type='text' placeholder='CITY'>
+          <button id='filter-button-city' type='button' class='btn btn-default'>Filter City</button>
         </div>
         <div class='form-group'>
           <center><label for='state-filter'>State</label></center>
           <input class='form-control' id='sighting-state' name='sighting-filter-by-datetime' type='text' placeholder='ST'>
+          <button id='filter-button-state' type='button' class='btn btn-default'>Filter State</button>
         </div>
         <div class='form-group'>
           <center><label for='country-filter'>Country</label></center>
           <input class='form-control' id='sighting-country' name='sighting-filter-by-datetime' type='text' placeholder='US'>
+          <button id='filter-button-country' type='button' class='btn btn-default'>Filter Country</button>
         </div>
         <div class='form-group'>
           <center><label for='shape-filter'>Shape</label></center>
           <input class='form-control' id='sighting-shape' name='sighting-filter-by-datetime' type='text' placeholder='circle'>
+          <button id='filter-button-shape' type='button' class='btn btn-default'>Filter Shape</button>
         </div>
       </form>
       <center>
-        <button id='filter-button' type='button' class='btn btn-default'>Filter</button>
-        <button id='reset-button' type='button' class='btn btn-default'>Reset</button>
+        <button id='reset-button' type='button' class='btn btn-default reset'>Reset</button>
       </center>
-    </div>
+    </div></center>
     <div class='col-sm-12'>
       <table class='table table-responsive table-bordered'>
         <thead>
